Fixed Maven and done with cancelbooking and 50% in checkin..i think